# mentor-worker-benchmark

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.in
.github/: release.yml
.github/ISSUE_TEMPLATE/: result_submission.md
.github/workflows/: ci.yml  submissions-pr.yml  verify-submission.yml
docs/: METHODOLOGY.md  PACKS.md  REPRODUCIBILITY.md  SUBMIT_RESULTS.md  benchmark_policy.md  index.html  leaderboard.md  post_ready_summary.md  reproducibility.md
leaderboard/: summary.json
leaderboard/submissions/: community_quick_matrix_qwen25coder7b_deepseekcoder67b_2026-03-03.json  community_quick_matrix_qwen25coder7b_llama318b_2026-03-03.json  community_quick_matrix_qwen25coder7b_mistral7b_2026-03-03.json  community_quick_matrix_qwen25coder7b_qwen25coder7b_2026-03-03.json  community_quick_multiseed_deepseekcoder67b_llama318b_2026-03-03.json  community_quick_multiseed_mistral7b_llama318b_2026-03-03.json  community_quick_multiseed_phi3mini_gemma29b_2026-03-03.json  community_quick_multiseed_phi3mini_llama318b_2026-03-03.json  community_quick_multiseed_qwen25coder7b_llama318b_2026-03-03.json  community_quick_multiseed_qwen25coder7b_mistral7b_2026-03-03.json  community_quick_phi3mini_gemma29b_2026-03-01.json  community_quick_phi3mini_gemma29b_2026-03-02.json  community_quick_phi3mini_llama318b_2026-03-02.json  community_quick_phi3mini_mistral7b_2026-03-01.json  community_quick_qwen25coder7b_llama318b_2026-03-01.json  community_quick_qwen25coder7b_llama318b_2026-03-02.json  community_quick_qwen25coder7b_mistral7b_2026-03-02.json  community_quick_signal_deepseekcoder67b_llama318b_2026-03-03.json  community_quick_signal_qwen25coder7b_deepseekcoder67b_2026-03-03.json  community_quick_signal_qwen25coder7b_gemma29b_2026-03-04.json  community_quick_signal_qwen25coder7b_llama318b_2026-03-03.json  official_dev50_signal_qwen_llama.json  (+11 more)
mentor_worker_benchmark/: __init__.py  __main__.py  analysis.py  checkpointing.py  cli.py  llm_client.py  ollama_client.py  openai_client.py  protocol.py  provider_factory.py  runner.py  submission.py
results/: curation_report.json  curation_report.md  leaderboard.example.md  schema.md
scripts/: build_community_leaderboard.py  build_post_ready_summary.py  docker_sanity.sh  install_ollama.sh  publish_leaderboard.py  reproduce_leaderboard.sh  run_local_verification.sh  run_official_dev.sh  run_official_dev_v1.sh  run_official_quick.sh  run_official_quick_v2.sh
tests/: test_analysis.py  test_community_leaderboard_builder.py  test_core.py  test_curation.py  test_harness_integrity.py  test_openai_client.py  test_pack_registry.py  test_protocol.py  test_provider_cli.py  test_runner_repro.py  test_submission.py  test_task_pack_metadata.py  test_task_pack_v2_metadata.py  test_task_pack_v2_provenance.py  test_task_strength_gates.py
(+1197 files in other folders)
